--- a/index.html
+++ b/index.html
@@ -47,21 +47,20 @@
             <h2>Projetos</h2>
             <div class="galeria-vertical">
                 <!-- 6 projetos -->
-                <div class="projeto" data-projeto="1"><img src="img/img_ref01.jpg" alt="Projeto 1"></div>
-                <div class="projeto" data-projeto="2"><img src="img/img_ref02.jpg" alt="Projeto 2"></div>
-                <div class="projeto" data-projeto="3"><img src="img/img_ref03.jpg" alt="Projeto 3"></div>
-                <div class="projeto" data-projeto="4"><img src="img/img_ref04.jpg" alt="Projeto 4"></div>
-                <div class="projeto" data-projeto="5"><img src="img/img_ref05.jpg" alt="Projeto 5"></div>
-                <div class="projeto" data-projeto="6"><img src="img/img_ref06.jpg" alt="Projeto 6"></div>
+                <div class="projeto" data-projeto="1"><img src="img/dimildesigner_port_img01.jpg" alt="Projeto 1"></div>
+                <div class="projeto" data-projeto="2"><img src="img/dimildesigner_port_img02.jpg" alt="Projeto 2"></div>
+                <div class="projeto" data-projeto="3"><img src="img/dimildesigner_port_img03.jpg" alt="Projeto 3"></div>
+                <div class="projeto" data-projeto="4"><img src="img/dimildesigner_port_img04.jpg" alt="Projeto 4"></div>
+                <div class="projeto" data-projeto="5"><img src="img/dimildesigner_port_img05.jpg" alt="Projeto 5"></div>
+                <div class="projeto" data-projeto="6"><img src="img/dimildesigner_port_img06.jpg" alt="Projeto 6"></div>
             </div>
         </section>
 
         <footer id="sobre">
             <div class="sobre_mim">
                 <h2>Sobre mim</h2>
-                <p>Olá! Sou Desenvolvedor Front-end e Designer, apaixonado por transformar ideias em experiências
-                    digitais marcantes. </p> <br>
-                <p>Busco unir estética, acessibilidade e performance em cada projeto.</p>
+                <p>Olá! Sou o Eddie, um desenvolvedor Front-end e Designer Gráfico, apaixonado por transformar ideias em experiências digitais memoráveis. </p> <br>
+                <p>Busco unir estética visual, acessibilidade e performance em cada projeto.</p>
             </div>
             <div class="social">
                 <a href="https://www.linkedin.com/in/dimildesigner" target="_blank" class="fa fa-linkedin"></a>
